@@ -428,7 +428,6 @@ int json_checker::check_char(int next_char)
  */
 
 static bool is_json_second_char[256];		// shared between all threads
-//static be13::hash_def hasher;
 
 static const char *json_second_chars = "0123456789.-{[ \t\n\r\"";
 extern "C"
@@ -442,8 +441,6 @@ void scan_json(const class scanner_params &sp,const recursion_control_block &rcb
         sp.info->description    = "Scans for JSON-encoded data";
         sp.info->scanner_version= "1.1";
         sp.info->feature_names.insert("json");
-
-        //hasher    = sp.info->config->hasher;
 
 	/* Create a fast map of the valid json characters.*/
 	memset(is_json_second_char,0,sizeof(is_json_second_char));
