@@ -23,7 +23,6 @@
 
 using namespace std;
 
-//static be13::hash_def hasher;
 extern "C"
 void scan_kml(const class scanner_params &sp,const recursion_control_block &rcb)
 {
@@ -36,7 +35,6 @@ void scan_kml(const class scanner_params &sp,const recursion_control_block &rcb)
         sp.info->description    = "Scans for KML files";
         sp.info->scanner_version= "1.0";
 	sp.info->feature_names.insert("kml");
-        //hasher    = sp.info->config->hasher;
 	return;
     }
     if(sp.phase==scanner_params::PHASE_SCAN){
